# pictallion

./: .actrc  .dockerignore  .env.example  .env.node22  .gitattributes  .gitignore  .mise.toml  .replit  .roomodes  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_MANIFEST.json  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  HYGIENE_REPORT.md  LICENSE  MIGRATION_GUIDE.md  OLLAMA_SETUP.md  README-ROOCODE-PACK.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  justfile  package-lock.json  package.json  pictallion.code-workspace  playwright.config.ts  python-backend-architecture.md  replit.md  roocode.md  tailwind.config.ts  vite.config.d.ts  vite.config.js  vite.config.ts  vite.config.ts.backup  (+1 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.husky/: pre-push
.mise/: config.toml
.roo/: .roomodes  instructions.md  mcp.json
assets/: icon.icns
attached_assets/: Pasted--Pictallion-Photo-Management-Application-Complete-Feature-Blueprint-Executive-Summary-Pictal-1753405176911_1753405176912.txt  Pasted--gyp-nix-store-lz7iav1hd92jbv44zf2rdd7b2mj23536-nodejs-20-19-3-lib-node-modules-npm-node-modules--1753838447215_1753838447215.txt  Pasted-0s-15s-Run-docker-build-push-action-v5-GitHub-Actions-runtime-token-ACs-Docker-info-Proxy-configurat-1753410706943_1753410706944.txt  Pasted-16s-Run-docker-build-push-action-v5-GitHub-Actions-runtime-token-ACs-Docker-info-Proxy-configuration-1753411146986_1753411146988.txt  Pasted-Run-chmod-x-scripts-build-docker-sh-Building-Pictallion-Docker-image-Docker-configuration-c-1753409376515_1753409376516.txt  Pasted-Run-chmod-x-scripts-build-docker-sh-Building-Pictallion-Docker-image-Docker-configuration-c-1753631645103_1753631645106.txt  Pasted-Run-docker-build-push-action-v5-GitHub-Actions-runtime-token-ACs-Docker-info-Proxy-configuration-Bui-1753412886794_1753412886794.txt  Pasted-Run-docker-build-push-action-v5-GitHub-Actions-runtime-token-ACs-Docker-info-Proxy-configuration-Bui-1753646444563_1753646444564.txt  Pasted-Run-if-mac-mac-then-electron-builder-version-26-0-12-os-23-6-0-artifacts-will-1753630800693_1753630800694.txt  Pasted-Run-if-mac-mac-then-electron-builder-version-26-0-12-os-23-6-0-artifacts-will-1753631687144_1753631687144.txt  Pasted-Run-if-win-mac-then-electron-builder-version-26-0-12-os-10-0-20348-artifacts--1753631269197_1753631269198.txt  Pasted-Run-if-win-mac-then-electron-builder-version-26-0-12-os-10-0-20348-artifacts--1753631908191_1753631908194.txt  Pasted-Run-npm-audit-audit-level-moderate-npm-audit-report-babel-helpers-7-26-10-Severity-moderate-1753408981977_1753408981977.txt  Pasted-Run-npm-run-build-rest-express-0-0-9-build-vite-build-esbuild-server-index-ts-platform-node-1753625737233_1753625737233.txt  Pasted-Skip-to-content-Files-Commands-Search-Packager-files-Config-files-Implement-enhanced-duplicate-detec-1753631325132_1753631325132.txt  (+1 more)
client/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  (+3 more)
server_py/: DATABASE_README.md  Dockerfile  README.md  alembic.ini  manage_db.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
server_py/app/: __init__.py  main.py
server_py/app/api/: __init__.py  ai_routes.py  collection_routes.py  event_routes.py  face_routes.py  file_routes.py  people_routes.py  photo_routes.py  search_routes.py
server_py/app/core/: __init__.py  config.py  crud.py  database.py  db_utils.py  migrations.py
server_py/app/migrations/: env.py
server_py/app/migrations/versions/: 001_initial_schema.py
server_py/app/models/: __init__.py  ai_prompt.py  base.py  collection.py  collection_photo.py  event.py  file_version.py  media_asset.py  person.py  schemas.py  setting.py
server_py/app/services/: __init__.py  advanced_search_service.py  ai_naming_service.py  ai_service.py  burst_detection_service.py  duplicate_detection_service.py  event_detection_service.py  face_detection_service.py  file_manager_service.py  location_clustering_service.py  metadata_service.py  prompt_management_service.py  reverse_geocoding_service.py  thumbnail_service.py
server_py/app/utils/: __init__.py
server_py/docs/: OPERATIONS.md  testing-guide.md
server_py/scripts/: generate_coverage_report.py
server_py/tests/: __init__.py  conftest.py  test_api.py  test_api_routes_comprehensive.py  test_database.py  test_database_comprehensive.py  test_integration_workflows.py  test_performance_load.py  test_services.py  test_services_comprehensive.py
server_py/tests/utils/: __init__.py  test_helpers.py
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri/migrations/: 001_initial.sql  002_indexes.sql  003_photos_hash_index.sql  004_photos_soft_delete.sql
src-tauri/src-tauri/src/: lib.rs
(+267 files in other folders)
