[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
thiserror = "1.0"
anyhow = "1.0"
exif = { package = "kamadak-exif", version = "0.6" }
image = { version = "0.25", default-features = true }
sha2 = "0.10"
